Replaced images w/ Github screenshots

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 text-center align-self-center mb-4 mb-md-0">
-                    <img class="img-fluid" src="images/the_Flash.jpg" alt="the_Flash">
+                    <img class="img-fluid" src="images/Task_List.png" alt="Task_List">
                 </div>
                 <div class="col-md-4">
                     <div class="mb-40 text-center text-md-left">
@@ -192,7 +192,7 @@
                     <div class="gallery-slider">
                         <div class="block">
                             <div class="gallery-overlay">
-                                <a href="images/the_Flash.jpg" class="image-popup gallery-popup">
+                                <a href="images/Task_List.png" class="image-popup gallery-popup">
                                     <i class="tf-ion-ios-search"></i>
                                 </a>
                             </div>
@@ -207,7 +207,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/Augur_EFC_1.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-indx-js.png" alt="">
                         </div>
 
                         <div class="block">
@@ -217,7 +217,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/Anon.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-indx.png" alt="">
                         </div>
 
                         <div class="block">
@@ -227,7 +227,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/pirate_sparrow.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-tm.png" alt="">
                         </div>
 
                         <div class="block">
@@ -246,7 +246,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/hacker_c.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-tm.png" alt="">
                         </div>
 
                         <div class="block">
@@ -256,7 +256,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/Augur_EFC_2.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-indx-js.png" alt="">
                         </div>
 
                         <div class="block">
@@ -266,7 +266,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/cyber_warrior.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-tm2" alt="">
                         </div>
 
                         <div class="block">
@@ -276,7 +276,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/hero.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-indx.png" alt="">
                         </div>
 
                         <div class="block">
@@ -286,7 +286,7 @@
                                 </a>
                             </div>
 
-                            <img class="img-fluid" src="images/Augur_EFC_3.jpg" alt="">
+                            <img class="img-fluid" src="images/GenerationUSA/fp-indx-js.png.jpg" alt="">
                         </div>
 
                     </div>
@@ -364,11 +364,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-100">
+<!--             <div class="row mt-100">
                 <div class="col-md-12 text-center">
                     <a href="" class="btn btn-main">Grab You Product Now</a>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
